# astronomical_instruments

./: .gitignore  README.md  bad_pixel_mask_20230101.fits  correction_curve_2019.npy  correction_curve_2024.npy  nirc2_nonlinearity_correction.py  nirc2_nonlinearity_correction_params.json  nonlinearity_analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: nirc2_nonlinearity_correction-checkpoint.py
analysis/: nirc2_nonlinearity_correction_params.json  nirc2_quad_nonlinearity_correction_params.json  nonlinearity_analysis.ipynb
examples/: bad_pixel_mask_example.py  linearity_example.py
old_analysis/: nirc2_nonlinearity_correction_params.json  nirc2_quad_nonlinearity_correction_params.json  nonlinearity_analysis.ipynb
src/astronomical_instruments/: NIRC2.py  __init__.py  utils.py
src/nirc2_nonlinearity_correction/: __init__.py  correction_curve.py  linearity.py
