[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nirc2_nonlinearity_correction"
version = "0.0.1"
authors = [
  { name="Jayke Nguyen", email="jsn.phpro1701@gmail.com" },
]
description = "Just a couple functions that correct NIRC2 non-linearity."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jsnguyen/nirc2_nonlinearity_correction"
"Bug Tracker" = "https://github.com/jsnguyen/nirc2_nonlinearity_correction/issues"
