[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astronomical_instruments"
version = "0.0.1"
authors = [
  { name="Jayke Nguyen", email="jsn.phpro1701@gmail.com" },
]
description = "Functions for astronomical instruments, mostly NIRC2"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jsnguyen/astronomical_instruments"
"Bug Tracker" = "https://github.com/jsnguyen/astronomical_instruments/issues"
